--- a/src/components/ui/TeamSlot/TeamSlot.module.css
+++ b/src/components/ui/TeamSlot/TeamSlot.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 16rem;
-  min-height: 4rem;
+  height: 5rem;
   background-color: var(--surface-card);
   position: relative;
   overflow: hidden;
@@ -19,13 +19,13 @@
 }
 
 .innerEditable {
-  padding: 0 var(--space-2);
+  padding: var(--space-1) var(--space-2);
 }
 
 .input {
   padding: 0 var(--space-2);
   width: 100%;
-  height: 70%;
+  height: 2.8rem;
   background-color: transparent;
   border: none;
   border: 1px solid var(--stroke-subtle);
